--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/SpotifyRemoteMacOS-Info.plist
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/SpotifyRemoteMacOS-Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.3</string>
+	<string>1.0.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>509</string>
+	<string>539</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.music</string>
 	<key>LSMinimumSystemVersion</key>
@@ -29,7 +29,7 @@
 	<key>LSUIElement</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012 Danger Cove. All rights reserved.</string>
+	<string>Copyright © 2012-2014 Danger Cove. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
