--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/SpotifyRemoteMacOS-Info.plist
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/SpotifyRemoteMacOS-Info.plist
@@ -20,8 +20,21 @@
 	<string>1.0.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLName</key>
+			<string>com.dangercove.reign.Reign-for-Spotify.LoginHelper.Target</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.dangercove.reign.Reign-for-Spotify.LoginHelper.Target</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>563</string>
+	<string>565</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.music</string>
 	<key>LSMinimumSystemVersion</key>
